--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,9 +19,9 @@ build:
 requirements:
   host:
     - pip
-    - python >=2.7,<3.7
+    - python {{ python_min }}
   run:
-    - python >=2.7,<3.7
+    - python >={{ python_min }}
     - numpy >=1.16.4
     - pillow >=6.2.0
     - retrying >=1.3.3
@@ -33,6 +33,8 @@ requirements:
 test:
   imports:
     - sagemaker_pytorch_serving_container
+  requires:
+    - python {{ python_min }}
 
 about:
   home: https://github.com/aws/sagemaker-pytorch-serving-container/
